Toontown/logs/toontown-150429_224735.log
ToontownStart: Polling for game2 to finish...
ToontownStart: Game2 is finished.
ToontownStart: Starting the game.
ToontownStart: setting default font
TTLocalizer: Running in language: english
from toontown.toonbase.TTLocalizerEnglish import *
OTPLocalizer: Running in language: english
from otp.otpbase.OTPLocalizerEnglish import *
Traceback (most recent call last):
  File "C:\Panda3D-1.9.0\python\lib\runpy.py", line 162, in _run_module_as_main
    "__main__", fname, loader, pkg_name)
  File "C:\Panda3D-1.9.0\python\lib\runpy.py", line 72, in _run_code
    exec code in run_globals
  File "C:\Users\user\Downloads\Ansem\aviproxy\Fusion364\TT Offline Modded\Toontown\toontown\toonbase\ToontownStartWithInjector.py", line 79, in <module>
    import ToonBase
  File "toontown\toonbase\ToonBase.py", line 27, in <module>
    from toontown.nametag import NametagGlobals
  File "toontown\nametag\NametagGlobals.py", line 160
    CCSuit: (
          ^
SyntaxError: invalid syntax
